force-app/main/default/objects/Pilot_2__c/Pilot_2__c.object-meta.xml
<CustomObject>
    <label>Pilot 2</label>
    <nameField>
        <displayFormat>Pilot-{000}</displayFormat>
        <label>Pilot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilots 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>