force-app/main/default/objects/Pilot_2__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chief Pilot</fullName>
            </value>
            <value>
                <fullName>Co-Pilot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>