force-app/main/default/objects/Pilot_2__c/fields/Pilot_License__c.field-meta.xml
<CustomField>
    <fullName>Pilot_License__c</fullName>
    <label>Pilot License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>